--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 .logo {
-    background: url("matière/tg.gif");
+    background: url("https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297082/GIFs/tg.gif");
     background-color: white;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -33,7 +33,7 @@ body {
 }
 
 .nav:hover  {
-    background-image: url("matière/back2.gif")
+    background-image: url("https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297104/GIFs/back2.gif")
 }
 
 nav li {
@@ -128,6 +128,21 @@ ul.container-b {
     bottom: 30px;
 }
 
+ul.container-c {
+    background-color: rgb(126, 61, 190);
+    background-position: center;
+    text-align: center;
+    list-style: none;
+    display: flex;
+    height: 200px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 0;
+    position: relative;
+    bottom: 30px;
+    align-items: center;
+}
+
 li {
     position: relative;
     bottom: +10px;
@@ -170,13 +185,27 @@ li.item-d {
     margin-right: 50px;
 }
 
+li.item-e {
+    background-color: rgb(136, 88, 184);
+    color: white;
+    text-align: center;
+    margin-top: 25px;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+li.item-e:hover {
+    background-color: white;
+    color: rgb(136, 88, 184)
+}
+
 li.gif {
     background-color: white;
     width: 300px;
     height: 300px;
     margin-top: 25px;
     margin-right: 50px;
-    border-radius: 50%;
+    border-radius: 30px;
 }
 
 footer {
