--- a/main.css
+++ b/main.css
@@ -93,7 +93,7 @@ ul.front-cnt {
 }
 
 header.div {
-    background-color: #f747d750;
+    background-color: #918bb9;
     color: white;
     padding: 15px;
     text-align: center;
