--- a/main.css
+++ b/main.css
@@ -93,7 +93,7 @@ ul.front-cnt {
 }
 
 header.div {
-    background-color: #918bb9;
+    background-color: #8881b4;
     color: white;
     padding: 15px;
     text-align: center;
@@ -129,7 +129,7 @@ ul.container-b {
 }
 
 ul.container-c {
-    background-color: rgb(126, 61, 190);
+    background-color:#312f5d;
     background-position: center;
     text-align: center;
     list-style: none;
@@ -157,7 +157,7 @@ li.item-a {
 }
 
 li.item-b {
-    background-color: #503a6a;
+    background-color: #75529b;
     color: white;
     border-width: 5px;
     border-radius: 20px;
@@ -175,7 +175,7 @@ li.item-c {
 }
 
 li.item-d {
-    background-color: #ae6fe6;
+    background-color: #ab6fe2;
     color: white;
     border-width: 5px;
     border-radius: 20px;
@@ -186,7 +186,7 @@ li.item-d {
 }
 
 li.item-e {
-    background-color: rgb(136, 88, 184);
+    background-color: #503a6a;
     color: white;
     text-align: center;
     margin-top: 25px;
@@ -196,7 +196,7 @@ li.item-e {
 
 li.item-e:hover {
     background-color: white;
-    color: rgb(136, 88, 184)
+    color: #503a6a;
 }
 
 li.gif {
