--- a/main.css
+++ b/main.css
@@ -60,8 +60,17 @@ a:link, a:visited {
     color: inherit;
 }
 
+a.slideLink {
+text-decoration: none;
+color: white;
+}
+
+a.slideLink:hover {
+text-decoration:underline;
+}
+
 header.me {
-    background-color: rgb(102, 102, 102);
+    background-color: #8881b4;
     color: white;
     padding: 35px;
     text-align: center;
@@ -69,27 +78,45 @@ header.me {
     position: relative;
 }
 
-ul.front-cnt {
+div.mySlides {
     background-color: black;
-    color: white;
-    height: 700px;
+    background-image: url("https://res.cloudinary.com/dc2cywkwf/image/upload/v1552331636/Light_Painting_05.jpg");
+    background-position: center;
+    background-size: 100%;
+    height: 650px;
+    font-size: 20px;
     position: relative;
-    bottom: 15px;
-    right: 20px;
+    bottom: 7px;
+}
+
+pre {
+    color: white;
+    font-weight: bold;
+    line-height: 1.4;
 }
 
 .bl {
     position: relative;
-    bottom: 50px;
-    right: -1%;
-    margin: 0;
+    bottom: +50px;
+    left: 48%;
 }
 
 .br {
     position: relative;
-    bottom : 50px;
-    left: 95%;
-    margin: 0;
+    bottom: +50px;
+    left: 48%;
+}
+
+.bl-b {
+    position: relative;
+    bottom: +50px;
+    left: 47%;
+}
+
+.br-b {
+    position: relative;
+    bottom: +50px;
+    left: 47%;
 }
 
 header.div {
