--- a/main.css
+++ b/main.css
@@ -81,6 +81,7 @@ header.me {
 div.mySlides {
     background-color: black;
     background-image: url("https://res.cloudinary.com/dc2cywkwf/image/upload/v1552331636/Light_Painting_05.jpg");
+    background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
     height: 650px;
